When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

In the following text, the tag "USER" indicates a significant change that will impact user experience in some way.
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user.


21st June 2021
- Show relative motion increment in slicing debug message and correctly display the current z depth (bugfix)


18th June 2021
- USER (Dev) - If PMT Auto-On is enabled, the acquisition will not proceed.

17th June 2021
- USER (Dev) - Bugfix: Correct slow start on Bake
- USER (Dev) - New default settings in system settings file are now automatically added to the live file. A backup of the original live file is created.
- New option added to system settings file: defaultYcutPos. This allows the vibratime to be mounted off-centre
 with respect to objective. Useful for some water baths.
- USER (Dev) - Option to set dominant stage tiling direction. To date X was dominant. Now Y is default. NOTE: User should also update StitchIt!

4th May 2021
- USER - All trim slices now start from the cutting start point. This seems more like the expected behavior
- Bugfix - Attempt to trap error that is causing acquisition to crash if there is only one row or column of
           tiles near the the end of a sample. Acquisition will just end at this point. The assumption being
           that it is complete. This is not a perfect solution but it's serviceable for now.


3nd May 2021
- USER - If requested number of slices exceeds what is possible, the recipe is updated automatically. Therefore
          default recipe can now have a very large number of slices requested and by extension BakingTray will
          by default image the full available depth.
- USER - New Sample has a confirmation dialogue and resets settings in the prepare GUI.
- USER - Various bugfixes, including for SI Basic.

5th April 2021